--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="./main.js" defer></script> -->
-    <script src="./object.js"></script>
+    <!-- <script src="./object.js"></script> -->
+    <!-- <script src="./map.js"></script> -->
+    
 </head>
 <body>
-    <h1>Wellcome to javascript</h1>
+    <h1 id='demo'></h1>
+    <button class="click" >Click</button>
+
+    <script src="./test.js"></script>
 </body>
 </html>
