--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1 id='demo'></h1>
     <button class="click" >Click</button>
 
+    <script src="./조건문/test.js"></script>
+    <script src="./연산자/test.js"></script>
     <script src="./test.js"></script>
 </body>
 </html>
