--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <h1 id='demo'></h1>
     <button class="click" >Click</button>
 
-    <script src="./조건문/test.js"></script>
-    <script src="./연산자/test.js"></script>
-    <script src="./test.js"></script>
+    <script src="./배열/test.js"></script>
+    <!-- <script src="./객체/test.js"></script> -->
+    <!-- <script src="./함수/test.js"></script> -->
+    <!-- <script src="./조건문/test.js"></script> -->
+    <!-- <script src="./연산자/test.js"></script> -->
+    <!-- <script src="./test.js"></script> -->
 </body>
 </html>
