--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1 id='demo'></h1>
     <button class="click" >Click</button>
 
-    <script src="./배열/test.js"></script>
+
+    <script src="./반복문/ test.js"></script>
+    <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
     <!-- <script src="./조건문/test.js"></script> -->
