--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <button class="click" >Click</button>
 
 
-    <script src="./반복문/ test.js"></script>
+    <script src="./배열내장함수/text.js"></script>
+    <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
