--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1 id='demo'></h1>
     <button class="click" >Click</button>
 
-
-    <script src="./배열내장함수/text.js"></script>
+    <script src="./baseballGame/baseball.js"></script>
+    <!-- <script src="./배열내장함수/text.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
