--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <h1 id='demo'></h1>
+    <!-- <button onclick="goForward()" >forward</button>
+    <button onclick="clickBtn()">btn</button> -->
 
-    <script src="./baseballGame/baseball.js"></script>
-    <!-- <script src="./배열내장함수/text.js"></script> -->
+    <script src="./객체상속/main.js"></script>
+    <!-- <script src="./baseballGame/baseball.js"></script> -->
+    <!-- <script src="./배열내장함수/test.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
