--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     
 </head>
 <body>
-    <h1 id='demo'></h1>
+    
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
-    <script src="./객체상속/main.js"></script>
+    <script src="./자동텍스트RPG/test.js"></script>
+    <div id="log"></div> <!-- 자동텍스트RPG -->
+
+    <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
