--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
-    
-    <div id="log"></div> <!-- 자동텍스트RPG -->
-    <script src="./자동텍스트RPG/test.js"></script>
+    <script src="./Object객체/test.js"></script>
+    <!-- <div id="log"></div> 자동텍스트RPG -->
+    <!-- <script src="./자동텍스트RPG/test.js"></script> -->
+
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
