--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
-    <script src="./Object객체/test.js"></script>
+
+    <script src="./JSON/discripttion.js"></script>
+
+    <!-- <script src="./Object객체/test.js"></script> -->
+
     <!-- <div id="log"></div> 자동텍스트RPG -->
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
