--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
-
-    <script src="./JSON/discripttion.js"></script>
+    <script src="./EventListener/test.js"></script>
+    <!-- <script src="./JSON/discripttion.js"></script> -->
 
     <!-- <script src="./Object객체/test.js"></script> -->
 
