--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
+
+    <button id='clickMe' >Click Me!</button>
+    <input type="text" id="msg">
+    <div id="result"></div>
     <script src="./EventListener/test.js"></script>
     <!-- <script src="./JSON/discripttion.js"></script> -->
 
