study EventListener and Form

--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
+    <form action="index2.html" id="submit-form" onsubmit="return frSubmit()" onclick="frClick()" >
+        <input type="text" id="userId" name="username" placeholder="ID" >
+        <input type="password" id="userPw" name="password" placeholder="Password">
+        <input type="submit">
+        <input type="reset">
+    </form>
+    <script src="./form태그/test.js"></script>
 
-    <button id='clickMe' >Click Me!</button>
+    <!-- <button id='clickMe' >Click Me!</button>
     <input type="text" id="msg">
-    <div id="result"></div>
-    <script src="./EventListener/test.js"></script>
-    
+    <div id="result"></div> -->
+    <!-- <script src="./EventListener/test.js"></script> -->
+
     <!-- <script src="./JSON/discripttion.js"></script> -->
 
     <!-- <script src="./Object객체/test.js"></script> -->
