변수와 상수

--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
-    <form action="index2.html" id="submit-form" onsubmit="return frSubmit()" onclick="frClick()" >
-        <input type="text" id="userId" name="username" placeholder="ID" >
-        <input type="password" id="userPw" name="password" placeholder="Password">
+    <!-- Form 태그 예제 -->
+    <form action="index2.html" id="submit-form" onsubmit="return frSubmit()" >
+        <input type="text" id="userId" name="username" placeholder="ID" required>
+        <input type="password" id="userPw" name="password" placeholder="Password" required>
+        <input type="file" >
         <input type="submit">
         <input type="reset">
     </form>
     <script src="./form태그/test.js"></script>
 
-    <!-- <button id='clickMe' >Click Me!</button>
-    <input type="text" id="msg">
-    <div id="result"></div> -->
+    <!-- EventListener
+        <button id='clickMe' >Click Me!</button>
+        <input type="text" id="msg">
+        <div id="result"></div>
+     -->
     <!-- <script src="./EventListener/test.js"></script> -->
 
     <!-- <script src="./JSON/discripttion.js"></script> -->
