변수와 상수

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 </head>
 <body>
     
+
+    <!-- 변수와 상수 -->
+    <script src="./변수와 상수/test.js"></script>
+
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
 
     <!-- Form 태그 예제 -->
-    <form action="index2.html" id="submit-form" onsubmit="return frSubmit()" >
+    <!-- <form action="index2.html" id="submit-form" onsubmit="return frSubmit()" >
         <input type="text" id="userId" name="username" placeholder="ID" required>
         <input type="password" id="userPw" name="password" placeholder="Password" required>
         <input type="file" >
         <input type="submit">
         <input type="reset">
-    </form>
-    <script src="./form태그/test.js"></script>
+    </form> -->
+    <!-- <script src="./form태그/test.js"></script> -->
 
     <!-- EventListener
         <button id='clickMe' >Click Me!</button>
