--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     
 
+    <script src="./자료형/test.js"></script>
+
     <!-- 변수와 상수 -->
-    <script src="./변수와 상수/test.js"></script>
+    <!-- <script src="./변수와 상수/test.js"></script> -->
 
     <!-- <button onclick="goForward()" >forward</button>
     <button onclick="clickBtn()">btn</button> -->
