--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     
 
-    <script src="./자료형/test.js"></script>
+    <script src="./형 변환/test.js"></script>
+
+    <!-- <script src="./자료형/test.js"></script> -->
 
     <!-- 변수와 상수 -->
     <!-- <script src="./변수와 상수/test.js"></script> -->
