--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
 
-    <script src="./형 변환/test.js"></script>
+    <!-- <script src="./형 변환/test.js"></script> -->
 
     <!-- <script src="./자료형/test.js"></script> -->
 
@@ -52,7 +52,7 @@
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
-    <!-- <script src="./함수/test.js"></script> -->
+    <script src="./함수/test.js"></script>
     <!-- <script src="./조건문/test.js"></script> -->
     <!-- <script src="./연산자/test.js"></script> -->
     <!-- <script src="./test.js"></script> -->
