--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
-    <script src="./함수/test.js"></script>
+    <!-- <script src="./함수/test.js"></script> -->
+    <script src="./조건문/test2.js"></script>
     <!-- <script src="./조건문/test.js"></script> -->
     <!-- <script src="./연산자/test.js"></script> -->
     <!-- <script src="./test.js"></script> -->
