--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
-    <script src="./반복문/test2.js"></script>
+    <script src="./반복문/test3.js"></script>
+    <!-- <script src="./반복문/test2.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
