--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <!-- <div id="log"></div> 자동텍스트RPG -->
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
+
+    <script src="./null 병합 연산자/test.js"></script>
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
@@ -54,7 +56,7 @@
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
-    <script src="./함수/test2.js"></script>
+    <!-- <script src="./함수/test2.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
     <!-- <script src="./조건문/test2.js"></script> -->
     <!-- <script src="./조건문/test.js"></script> -->
