함수선언문 함수표현식

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,11 @@
     <!-- <script src="./main.js" defer></script> -->
     <!-- <script src="./object.js"></script> -->
     <!-- <script src="./map.js"></script> -->
-    
+
 </head>
+
 <body>
-    
+
 
     <!-- <script src="./형 변환/test.js"></script> -->
 
@@ -47,7 +49,7 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
-    <script src="./null 병합 연산자/test.js"></script>
+    <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
@@ -56,11 +58,12 @@
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
     <!-- <script src="./객체/test.js"></script> -->
-    <!-- <script src="./함수/test2.js"></script> -->
+    <script src="./함수/test2.js"></script>
     <!-- <script src="./함수/test.js"></script> -->
     <!-- <script src="./조건문/test2.js"></script> -->
     <!-- <script src="./조건문/test.js"></script> -->
     <!-- <script src="./연산자/test.js"></script> -->
     <!-- <script src="./test.js"></script> -->
 </body>
+
 </html>
