--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
+    <script src="./가비지컬렉션/test.js"></script>
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
@@ -57,7 +58,7 @@
     <!-- <script src="./반복문/test2.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
     <!-- <script src="./배열/test.js"></script> -->
-    <script src="./객체/test.js"></script>
+    <!-- <script src="./객체/test.js"></script> -->
     <!-- <script src="./화살표함수/test.js"></script> -->
     <!-- <script src="./함수/test2.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
