--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
-    <script src="./가비지컬렉션/test.js"></script>
+    <script src="./메서드와this/test.js"></script>
+    <!-- <script src="./가비지컬렉션/test.js"></script> -->
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
