--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- <div id="log"></div> 자동텍스트RPG -->
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
-
+    <!-- <script src="./메서드와this/test2.js"></script> -->
     <script src="./메서드와this/test.js"></script>
     <!-- <script src="./가비지컬렉션/test.js"></script> -->
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
