옵셔널 체이닝

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
     <!-- <div id="log"></div> 자동텍스트RPG -->
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
+
+    <script src="./옵셔널체이닝/test.js"></script>
+    <!-- <script src="./new연산자와 생성자함수/test.js"></script> -->
     <!-- <script src="./메서드와this/test2.js"></script> -->
-    <script src="./메서드와this/test.js"></script>
+    <!-- <script src="./메서드와this/test.js"></script> -->
     <!-- <script src="./가비지컬렉션/test.js"></script> -->
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./객체상속/main.js"></script> -->
@@ -67,6 +70,6 @@
     <!-- <script src="./조건문/test.js"></script> -->
     <!-- <script src="./연산자/test.js"></script> -->
     <!-- <script src="./test.js"></script> -->
-</body>
+    </bo널y>
 
 </html>
