--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
-    <script src="./객체를 원시형으로 변환하기/test.js"></script>
+    <script src="./문자열/test.js"></script>
+    <!-- <script src="./원시값의 메서드/test.js"></script> -->
+    <!-- <script src="./객체를 원시형으로 변환하기/test.js"></script> -->
     <!-- <script src="./심볼형/test.js"></script> -->
     <!-- <script src="./옵셔널체이닝/test.js"></script> -->
     <!-- <script src="./new연산자와 생성자함수/test.js"></script> -->
