if문 문제풀기

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
-    <script src="./문자열/test.js"></script>
+    <!-- <script src="./문자열/test.js"></script> -->
     <!-- <script src="./원시값의 메서드/test.js"></script> -->
     <!-- <script src="./객체를 원시형으로 변환하기/test.js"></script> -->
     <!-- <script src="./심볼형/test.js"></script> -->
@@ -70,8 +70,7 @@
     <!-- <script src="./화살표함수/test.js"></script> -->
     <!-- <script src="./함수/test2.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
-    <!-- <script src="./조건문/test2.js"></script> -->
-    <!-- <script src="./조건문/test.js"></script> -->
+    <script src="./조건문/test.js"></script>
     <!-- <script src="./연산자/test.js"></script> -->
     <!-- <script src="./test.js"></script> -->
     </bo널y>
