논리연산자

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <!-- <script src="./화살표함수/test.js"></script> -->
     <!-- <script src="./함수/test2.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
-    <script src="./조건문/test.js"></script>
-    <!-- <script src="./연산자/test.js"></script> -->
+    <!-- <script src="./조건문/test.js"></script> -->
+    <script src="./논리연산자/test.js"></script>
     <!-- <script src="./test.js"></script> -->
     </bo널y>
 
