--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     <!-- <script src="./반복문/test3.js"></script> -->
     <!-- <script src="./반복문/test2.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
-    <!-- <script src="./배열/test.js"></script> -->
+    <script src="./배열/test.js"></script>
     <!-- <script src="./객체/test.js"></script> -->
     <!-- <script src="./화살표함수/test.js"></script> -->
     <!-- <script src="./함수/test2.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
     <!-- <script src="./조건문/test.js"></script> -->
-    <script src="./논리연산자/test.js"></script>
+    <!-- <script src="./논리연산자/test.js"></script> -->
     <!-- <script src="./test.js"></script> -->
     </bo널y>
 
