배열내장 함수 연습문제

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
-    <script src="./배열내장함수/test.js"></script>
+    <script src="./배열내장함수/arrExample.js"></script>
+    <!-- <script src="./배열내장함수/test.js"></script> -->
     <!-- <script src="./반복문/test3.js"></script> -->
     <!-- <script src="./반복문/test2.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
