--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
-    <!-- <script src="./문자열함수/test.js"></script> -->
-    <!-- <script src="./문자열/test.js"></script> -->
+    <script src="./iterable객체/test.js"></script>
     <!-- <script src="./원시값의 메서드/test.js"></script> -->
     <!-- <script src="./객체를 원시형으로 변환하기/test.js"></script> -->
     <!-- <script src="./심볼형/test.js"></script> -->
@@ -62,14 +61,20 @@
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
-    <script src="./배열내장함수/arrExample.js"></script>
+
+    <!-- <script src="./배열내장함수/arrExample.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
+    <!-- <script src="./배열/test.js"></script> -->
+
     <!-- <script src="./반복문/test3.js"></script> -->
     <!-- <script src="./반복문/test2.js"></script> -->
     <!-- <script src="./반복문/ test.js"></script> -->
-    <!-- <script src="./배열/test.js"></script> -->
+
     <!-- <script src="./객체/test.js"></script> -->
     <!-- <script src="./화살표함수/test.js"></script> -->
+
+    <!-- <script src="./문자열함수/test.js"></script> -->
+    <!-- <script src="./문자열/test.js"></script> -->
     <!-- <script src="./함수/test2.js"></script> -->
     <!-- <script src="./함수/test.js"></script> -->
     <!-- <script src="./조건문/test.js"></script> -->
