--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- <script src="./자동텍스트RPG/test.js"></script> -->
 
 
-    <script src="./iterable객체/test.js"></script>
+
     <!-- <script src="./원시값의 메서드/test.js"></script> -->
     <!-- <script src="./객체를 원시형으로 변환하기/test.js"></script> -->
     <!-- <script src="./심볼형/test.js"></script> -->
@@ -59,8 +59,13 @@
     <!-- <script src="./메서드와this/test.js"></script> -->
     <!-- <script src="./가비지컬렉션/test.js"></script> -->
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
-    <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
+
+    <script src="./promise/test.js"></script>
+    <!-- <script src="./구조분해할당/test.js"></script> -->
+
+    <!-- <script src="./객체상속/main.js"></script> -->
+    <!-- <script src="./iterable객체/test.js"></script> -->
 
     <!-- <script src="./배열내장함수/arrExample.js"></script> -->
     <!-- <script src="./배열내장함수/test.js"></script> -->
