--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <!-- <script src="./null 병합 연산자/test.js"></script> -->
     <!-- <script src="./baseballGame/baseball.js"></script> -->
 
-    <script src="./promise/test.js"></script>
+    <!-- <script src="./promise/test.js"></script> -->
     <!-- <script src="./구조분해할당/test.js"></script> -->
 
     <!-- <script src="./객체상속/main.js"></script> -->
     <!-- <script src="./iterable객체/test.js"></script> -->
 
     <!-- <script src="./배열내장함수/arrExample.js"></script> -->
-    <!-- <script src="./배열내장함수/test.js"></script> -->
+    <script src="./배열내장함수/test.js"></script>
     <!-- <script src="./배열/test.js"></script> -->
 
     <!-- <script src="./반복문/test3.js"></script> -->
